<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FastFingers</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_view_presentation">Do you think you have the fastest fingers?</string>
    <string name="button_normal">Normal</string>
    <string name="button_time_trial">Time Trial</string>
    <string name="button_survival">Survival</string>
    <string name="button_hardcore">Hardcore</string>
    <string name="title_activity_game">FastFingers</string>
    <string name="your_score">Your Score: %d</string>
    <string name="actual_score">Score: %d</string>
    <string name="saved_best_score_default">0</string>
    <string name="best_score">Best Score: %d</string>
    <string name="text_view_actual_score">Score: 0</string>
    <string name="text_view_word">predilection</string>
    <string name="text_view_timer">5:9</string>
    <string name="text_view_time_is_over">Time Is Over!</string>
    <string name="text_view_your_score">Your Score: 100</string>
    <string name="text_view_best">Best: 200</string>
    <string name="button_try_again">Try Again</string>
    <string name="text_view_mode">Normal</string>
    <string name="mode_normal">Normal</string>
    <string name="mode_survival">Survival</string>
    <string name="mode_hardcore">Hardcore</string>
    <string name="saved_best_score_normal">BestNormal</string>
    <string name="saved_best_score_survival">BestSurvival</string>
    <string name="saved_best_score_hardcore">BestHardcore</string>

</resources>
