<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@drawable/background_main">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="167dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp">
            <Button
                android:id="@+id/button_normal"
                android:text="@string/button_normal"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/button_background_main"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp">
            <Button
                android:text="@string/button_survival"
                android:id="@+id/button_survival"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/button_background_main"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <Button
                android:text="@string/button_hardcore"
                android:id="@+id/button_hardcore"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/button_background_main"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>

    </LinearLayout>

</RelativeLayout>
